# ChangeLog for gnome-base/gnome-light
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.155 2012/04/19 20:33:40 ranger Exp $

  19 Apr 2012; Brent Baude <ranger@gentoo.org> gnome-light-2.32.1-r2.ebuild:
  Marking gnome-light-2.32.1-r2 ppc64 stable for bug 410611

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> gnome-light-2.32.1-r2.ebuild:
  Stable for amd64, wrt bug #410611

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org> gnome-light-2.32.1-r1.ebuild:
  alpha/ia64/sparc stable wrt #393007

  25 Mar 2012; Pacho Ramos <pacho@gentoo.org> gnome-light-2.32.1-r2.ebuild:
  Fix blocker to not block old slots too, thanks a lot to ulm for the heads up
  on IRC.

*gnome-light-2.32.1-r2 (25 Mar 2012)

  25 Mar 2012; Pacho Ramos <pacho@gentoo.org> +gnome-light-2.32.1-r2.ebuild:
  Force people to use a gtk+-3 fixed version for getting proper fallback theming
  instead of relying on workarounds.

  06 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-light-3.2.1.ebuild:
  s/use shell/use gnome-shell/ (bug #393399, thanks to Rafael Antonio Porras
  <SpOeK@DistroBit.Net> for reporting).

*gnome-light-3.2.1 (07 Nov 2011)

  07 Nov 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gnome-light-3.2.1.ebuild, metadata.xml:
  Bump to 3.2.1 from the gnome overlay. Uses the new sub-meta packages. Dropped
  alpha, arm, ia64, ppc, ppc64, sparc, x86-freebsd, amd64-linux, x86-linux,
  x86-solaris keywords due to new dependencies. Keywording bug will be filed
  soon.

  28 Oct 2011; Markus Meier <maekke@gentoo.org> gnome-light-2.32.1-r1.ebuild:
  arm stable, bug #385699

  21 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gnome-light-2.32.1-r1.ebuild:
  x86 stable wrt bug #385699

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gnome-light-2.32.1-r1.ebuild:
  ppc/ppc64 stable wrt #385699
