@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgnome
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnome/ChangeLog,v 1.215 2012/04/19 20:34:37 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgnome/ChangeLog,v 1.216 2012/04/25 20:20:11 maekke Exp $
+
+  25 Apr 2012; Markus Meier <maekke@gentoo.org> libgnome-2.32.1-r1.ebuild:
+  arm stable, bug #410611
 
   19 Apr 2012; Brent Baude <ranger@gentoo.org> libgnome-2.32.1-r1.ebuild:
   Marking libgnome-2.32.1-r1 ppc64 stable for bug 410611
