@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-light
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.155 2012/04/19 20:33:40 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.156 2012/04/25 20:18:01 maekke Exp $
+
+  25 Apr 2012; Markus Meier <maekke@gentoo.org> gnome-light-2.32.1-r2.ebuild:
+  arm stable, bug #410611
 
   19 Apr 2012; Brent Baude <ranger@gentoo.org> gnome-light-2.32.1-r2.ebuild:
   Marking gnome-light-2.32.1-r2 ppc64 stable for bug 410611
